<resources>
    <string name="main_app_title">Aripuca GPS Tracker</string>
    <string name="developer">VitalNik</string>
    <string name="company">Aripuca Apps</string>
    <string name="app_build_date">2013-08-26</string>
    <string name="app_url">http://tracker.aripuca.com</string>
    <string name="blog_url">http://tracker.aripuca.com/blog</string>
    <string name="market_url">https://play.google.com/store/apps/details?id=com.aripuca.tracker</string>
    <string name="source_url">http://code.google.com/p/aripuca-tracker</string>
    <string name="default_pace">00:00</string>
    <string name="default_azimuth">0°N</string>
    <string name="default_text">xxx</string>
    <string name="zero">0</string>
    <string name="acknowledgements">\n\nAcknowledgements:\n\nMany thanks to our translators:\nMark (German),\nDavid &amp; Jordi (Spanish)</string>
    <string name="build_date">Build date</string>
    <string name="about_dialog_message">Open source GPS tracking app for Android.\n\nOfficial blog:\nhttp://tracker.aripuca.com/blog\n\nSource code:\nhttp://code.google.com/p/aripuca-tracker</string>
    <string name="m">m</string>
    <string name="ft">ft</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="kn">kn</string>
    <string name="kph">kph</string>
    <string name="mph">mph</string>
    <string name="days">day(s)</string>
    <string name="hours">hour(s)</string>
    <string name="minutes">minute(s)</string>
    <string name="minute">min</string>
    <string name="seconds">second(s)</string>
    <string name="ver">v.</string>
    <string name="ok">OK</string>
    <string name="and">and</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="import1">Import</string>
    <string name="export">Export</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="average">Average</string>
    <string name="moving">Moving</string>
    <string name="total">Total</string>
    <string name="idle">Idle</string>
    <string name="azimuth">Azimuth</string>
    <string name="distance">Distance</string>
    <string name="distance_from_start">From start</string>
    <string name="distance_to_end">To end</string>
    <string name="total_distance">Total distance</string>
    <string name="coordinates">Coordinates</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="last_fix">Last fix</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="point">Point</string>
    <string name="points">Points</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="file">File</string>
    <string name="filename">File name</string>
    <string name="show_on_map">Show on map</string>
    <string name="show_info">Show info</string>
    <string name="elevation">Elevation</string>
    <string name="gain">Gain</string>
    <string name="loss">Loss</string>
    <string name="elevation_gain_loss">Gain/Loss</string>
    <string name="elevation_gain">Elevation gain</string>
    <string name="elevation_loss">Elevation loss</string>
    <string name="speed">Speed</string>
    <string name="average_speed">Aver. speed</string>
    <string name="average_moving_speed">Moving speed</string>
    <string name="max_speed">Max speed</string>
    <string name="acceleration">Acceleration</string>
    <string name="pace">Pace</string>
    <string name="average_pace">Aver. pace</string>
    <string name="max_pace">Max pace</string>
    <string name="speed_and_pace">Speed and pace</string>
    <string name="total_time">Total time</string>
    <string name="moving_time">Moving time</string>
    <string name="idle_time">Idle time</string>
    <string name="start_time">Start time</string>
    <string name="finish_time">Finish time</string>
    <string name="sync_all">Sync</string>
    <string name="export_all">Export</string>
    <string name="import_all">Import</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="next">Next</string>
    <string name="clear_all">Clear all</string>
    <string name="close">Close</string>
    <string name="app_settings_title">Application settings</string>
    <string name="user_interface">User interface</string>
    <string name="user_interface_summary">Screen mode and other settings</string>
    <string name="wake_lock_title">Stay awake</string>
    <string name="wake_lock_summary">Prevents phone from sleeping</string>
    <string name="quick_help_title">Quick help</string>
    <string name="quick_help_summary">Show quick help every time application is started</string>
    <string name="units">Units</string>
    <string name="units_summary">Measurement units (coordinates, distance, speed, etc)</string>
    <string name="track">Track</string>
    <string name="track_points">Track points</string>
    <string name="scheduled_track_points">Scheduled track points</string>
    <string name="tracks">Tracks</string>
    <string name="scheduled_tracks">Scheduled tracks</string>
    <string name="track_details_activity_title">Track details</string>
    <string name="show_track_details">Show details</string>
    <string name="show_track_points">Show points</string>
    <string name="show_track">Show track</string>
    <string name="track_chart">Track chart</string>
    <string name="record_track">Record track</string>
    <string name="recording_track">Recording track</string>
    <string name="track_recording_title">Track recording</string>
    <string name="track_recording_summary">Record track points in real time and collect extensive track statistics</string>
    <string name="recording_started">Track recording started</string>
    <string name="recording_paused">Track recording paused</string>
    <string name="recording_resumed">Track recording resumed</string>
    <string name="recording_finished">New track saved</string>
    <string formatted="false" name="resume_interrupted_track">Interrupted track found. Distance %s. Recorded on %s. Resume?</string>
    <string name="track_title_required">Track title required</string>
    <string name="edit_track">Edit track</string>
    <string name="track_updated">Track updated</string>
    <string name="track_deleted">Track deleted</string>
    <string name="all_tracks_deleted">All tracks deleted</string>
    <string name="press_and_hold_to_stop">Press and hold to stop track recording</string>
    <string name="press_and_hold_to_start">Press and hold to start track recording</string>
    <string name="press_again_to_exit">Press again to stop track recording and exit</string>
    <string name="stop_track_recording">Please stop track recording before exit</string>
    <string name="stop_scheduled_track_recording">Scheduled track recording is still running. Please stop it before exit.</string>
    <string name="stop_track_recording_and_try_again">Stop track recording and try again</string>
    <string name="track_description">Enter track description</string>
    <string name="min_distance_title">Minimum distance</string>
    <string name="min_distance_summary">Minimum distance between 2 recorded points</string>
    <string name="min_accuracy_title">Minimum accuracy</string>
    <string name="min_accuracy_summary">Minimum accuracy required for recording</string>
    <string name="cant_delete_track_being_recorded">You can\'t delete the track which is being recorded</string>
    <string name="cant_edit_track_being_recorded">You can\'t edit the track which is being recorded</string>
    <string name="segments">Segments</string>
    <string name="prev_segment">Prev segment</string>
    <string name="next_segment">Next segment</string>
    <string name="segmenting">Segmenting</string>
    <string name="segmenting_mode">Segmenting mode</string>
    <string name="segment_distance">By distance</string>
    <string name="segment_distance_summary">Segment track by equal distances</string>
    <string name="segment_time">By time</string>
    <string name="segment_time_summary">Segment track every N minutes</string>
    <string name="segment_custom_1">Custom intervals 1</string>
    <string name="segment_custom_2">Custom intervals 2</string>
    <string name="segment_custom_summary">Segment by preset distances</string>
    <string name="no_segments">No segments created for this track</string>
    <string name="compass">Compass</string>
    <string name="compass_summary">Where compass points to, etc</string>
    <string name="true_north">Point to True North</string>
    <string name="true_north_summary">Compass points to True North instead of Magnetic North</string>
    <string name="show_magnetic">Show Magnetic North</string>
    <string name="show_magnetic_summary">Shows transparent Magnetic North compass underneath the True North one</string>
    <string name="compass_vibration">Vibrating dial</string>
    <string name="compass_vibration_summary">Vibrate when dial is rotated</string>
    <string name="cardinal_point_north">N</string>
    <string name="cardinal_point_north_west">NW</string>
    <string name="cardinal_point_north_east">NE</string>
    <string name="cardinal_point_south">S</string>
    <string name="cardinal_point_south_west">SW</string>
    <string name="cardinal_point_south_east">SE</string>
    <string name="cardinal_point_west">W</string>
    <string name="cardinal_point_east">E</string>
    <string name="waypoint">Waypoint</string>
    <string name="waypoints">Waypoints</string>
    <string name="add_waypoint">Add waypoint</string>
    <string name="edit_waypoint">Edit waypoint</string>
    <string name="show_waypoint">Show waypoint</string>
    <string name="waypoints_summary">Default description, etc</string>
    <string name="waypoint_default_description">Default description</string>
    <string name="waypoint_default_description_summary">Request address from Google Geocoder and use it as waypoint description</string>
    <string name="export_waypoints">Export waypoints</string>
    <string name="waypoint_title_required">Waypoint title required</string>
    <string name="waypoint_saved">Waypoint saved</string>
    <string name="waypoint_updated">Waypoint updated</string>
    <string name="waypoint_deleted">Waypoint deleted</string>
    <string name="all_waypoints_deleted">All waypoints deleted</string>
    <string name="waypoint_description">Waypoint description</string>
    <string name="waypoint_title">Waypoint title</string>
    <string name="incorrect_coordinates">Incorrect coordinates</string>
    <string name="track_recording_in_progress">Track recording in progress</string>
    <string name="scheduled_track_recording_in_progress">Scheduled track recording in progress</string>
    <string name="wpt_title">Scheduled track recording</string>
    <string name="backup_db">Backup DB</string>
    <string name="restore_db">Restore DB</string>
    <string name="export_to_gpx">Export to GPX</string>
    <string name="export_to_kml">Export to KML</string>
    <string name="send_as_gpx">Attach GPX file</string>
    <string name="send_as_kml">Attach KML file</string>
    <string name="send_as_attachment">Send as attachment</string>
    <string name="start_scheduler">Start Scheduler</string>
</resources>