<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/scheduledRecordingMenuItem"
        android:icon="@drawable/ic_menu_startrecording"
        android:title="@string/start_scheduler"/>

    <!--
    <item
        android:id="@+id/waypointsMenuItem"
        android:icon="@drawable/ic_menu_myplaces"
        android:title="@string/waypoints"/>

         <item
        android:id="@+id/tracksMenuItem"
        android:icon="@drawable/ic_menu_track"
        android:title="@string/tracks"/>
    -->

    <item
        android:id="@+id/compassMenuItem"
        android:icon="@drawable/ic_menu_compass"
        android:title="@string/compass"/>
    <item
        android:id="@+id/settingsMenuItem"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/settings"/>
    <item
        android:id="@+id/backupMenuItem"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/backup_db"/>
    <item
        android:id="@+id/restoreMenuItem"
        android:icon="@drawable/ic_menu_revert"
        android:title="@string/restore_db"/>
    <item
        android:id="@+id/quickHelp"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/quick_help_title"/>
    <item
        android:id="@+id/aboutMenuItem"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/about"/>

</menu>