<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent">

	<LinearLayout android:id="@+id/mainLayout"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<!-- COORDINATES -->

		<LinearLayout style="@style/TrackDetailsRow">

			<LinearLayout style="@style/TrackDetailsLeftCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/lat" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/lat" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

			<LinearLayout style="@style/TrackDetailsRightCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/lng" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/lng" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

		</LinearLayout>

		<!-- ELEVATION & COMPASS -->

		<LinearLayout style="@style/TrackDetailsRow">

			<LinearLayout style="@style/TrackDetailsLeftCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/elevation" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/elevation" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

			<LinearLayout style="@style/TrackDetailsRightCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/azimuth" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/azimuth" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

		</LinearLayout>

		<!-- SPEED & PACE -->

		<LinearLayout style="@style/TrackDetailsRow">

			<LinearLayout style="@style/TrackDetailsLeftCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/speed" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/speed" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

			<LinearLayout style="@style/TrackDetailsRightCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/pace" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/pace" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

		</LinearLayout>

		<!-- LAST FIX TIME & ACCURACY -->

		<LinearLayout style="@style/TrackDetailsRow">

			<LinearLayout style="@style/TrackDetailsLeftCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/last_fix" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/lastFix" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

			<LinearLayout style="@style/TrackDetailsRightCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/accuracy" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/accuracy" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout style="@style/TrackDetailsRow">

			<LinearLayout style="@style/TrackDetailsLeftCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/sunrise" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/sunrise" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

			<LinearLayout style="@style/TrackDetailsRightCell"
				android:background="@drawable/border1">

				<TextView android:text="@string/sunset" style="@style/SmallHeader1"></TextView>

				<TextView android:id="@+id/sunset" style="@style/SmallLabel4">
				</TextView>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>
	
</FrameLayout>
