
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:paddingTop="2dp">

		<Button android:id="@+id/nextSegment" android:text="@string/next_segment"
			style="@style/ControlButton">
		</Button>
		
	</LinearLayout>

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:scrollbars="none">

		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">

			<!-- TRACK TITLE -->

			<LinearLayout style="@style/TrackDetailsRow"
				android:background="@drawable/border1">

				<LinearLayout style="@style/TrackDetailsCell">

					<TextView android:text="@string/description" style="@style/SmallHeader">
					</TextView>

					<TextView android:id="@+id/title" style="@style/SmallLabel">
					</TextView>

					<TextView android:id="@+id/descr" style="@style/SmallLabel">
					</TextView>

				</LinearLayout>

			</LinearLayout>


			<!-- TRACK DISTANCE -->

			<LinearLayout style="@style/TrackDetailsRow"
				android:background="@drawable/border1">

				<LinearLayout style="@style/TrackDetailsCell">

					<TextView android:text="@string/distance" style="@style/SmallHeader">
					</TextView>

					<TextView android:id="@+id/distance" style="@style/SmallLabel">
					</TextView>

				</LinearLayout>

			</LinearLayout>

			<!-- TIME -->

			<LinearLayout style="@style/TrackDetailsRowOfRows"
				android:background="@drawable/border1">

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/time" style="@style/SmallHeader">
						</TextView>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/total" style="@style/SmallHeader">
						</TextView>

						<TextView android:id="@+id/totalTime" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/moving" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/movingTime" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/idle" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/idleTime" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/start_time" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/startTime" style="@style/SmallLabel">
						</TextView>


					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/finish_time" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/finishTime" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<!-- SPEED -->

			<LinearLayout style="@style/TrackDetailsRowOfRows"
				android:background="@drawable/border1">

				<LinearLayout style="@style/TrackDetailsRow">
					<TextView android:text="@string/speed" style="@style/SmallHeader">
					</TextView>
				</LinearLayout>

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/average" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/averageSpeed" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/moving" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/averageMovingSpeed" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/max" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/maxSpeed" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<!-- PACE -->

			<LinearLayout style="@style/TrackDetailsRowOfRows"
				android:background="@drawable/border1">

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">
						<TextView android:text="@string/pace" style="@style/SmallHeader">
						</TextView>
					</LinearLayout>

				</LinearLayout>

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/average" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/averagePace" style="@style/SmallLabel">
						</TextView>


					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/moving" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/averageMovingPace" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/max" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/maxPace" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<!-- ELEVATION -->

			<LinearLayout style="@style/TrackDetailsRowOfRows"
				android:background="@drawable/border1">

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">
						<TextView android:text="@string/elevation" style="@style/SmallHeader">
						</TextView>
					</LinearLayout>

				</LinearLayout>

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/max" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/maxElevation" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/min" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/minElevation" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

				</LinearLayout>

				<LinearLayout style="@style/TrackDetailsRow">

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/gain" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/elevationGain" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

					<LinearLayout style="@style/TrackDetailsCell">

						<TextView android:text="@string/loss" style="@style/SmallHeader"></TextView>

						<TextView android:id="@+id/elevationLoss" style="@style/SmallLabel">
						</TextView>

					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>